--- a/HOME/index.html
+++ b/HOME/index.html
@@ -4,7 +4,7 @@
 	<title>Home Page</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="./css/style.css" rel="stylesheet" type="text/css" />
-	<meta charset="description" content="Login">
+	<meta charset="description" content="Home">
 	<meta charset="keywords" content="palavras,separadas,por,virgula">
 	<meta charset="author" content="HERBERTH" />
 	<meta charset="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
