--- a/HOME/index.html
+++ b/HOME/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-	<header>
+	<header class="cabecalho">
 		<div class="logo">
 			<img src="./css/imagens/logo25.png" alt="logo">
 		</div>
@@ -22,16 +22,16 @@
 		<nav class="menu">
 			<ul>
 				<li>
-					<a class="Inicio" href="">Inicio</a>
+					<a class="#Inicio">Inicio</a>
 				</li>
 				<li>
-					<a class="#Curso" href="">Curso</a>
+					<a class="#Curso">Curso</a>
 				</li>
 				<li>
-					<a class="#Sobre" href="">Sobre</a>
+					<a class="#Sobre">Sobre</a>
 				</li>
 				<li>
-					<a class="#Contato" href="">Contato</a>
+					<a class="#Contato">Contato</a>
 				</li>
 				
 			</ul>
