--- a/HOME/index.html
+++ b/HOME/index.html
@@ -40,6 +40,7 @@
 	</header>
 	<div class="bg1"></div>
 
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>   
 	<script src="./script.js"></script>
 
 </body>
